--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "chart.js": "^4.2.1",
     "vue": "^3.2.47",
+    "vue-preview": "^1.1.3",
     "vue-router": "^4.1.6",
     "vuetify": "^3.2.1"
   },
