--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tato30/vue-pdf": "^1.3.4",
     "axios": "^1.4.0",
     "chart.js": "^4.2.1",
     "vue": "^3.2.47",
